delete portfolios swagger fix
